<resources>
    <string name="app_name">DigitalTalent</string>

    <string name="txt_email">Email</string>
    <string name="txt_username">Username</string>

    <string name="txt_input_username">Input Username</string>
    <string name="txt_input_password">Input Password</string>

    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_email_field_kosong">Email tidak boleh kosong</string>
    <string name="txt_pass_field_kosong">Password tidak boleh kosong</string>
    <string name="txt_email_tidak_valid">Email tidak valid</string>
    <string name="txt_dont_have_password">Don’t have an account? Register here!</string>
    <string name="txt_email_2">Email</string>
    <string name="txt_re_type_password">Re-type Password</string>
    <string name="txt_phone_number">Phone Number</string>
</resources>